# binary-inspect

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
src/binary_inspect/: __init__.py  __main__.py
src/binary_inspect/core/: __init__.py  binary_reader.py  data_inspector.py  entropy.py  exporter.py  magic_detector.py  models.py  pattern_parser.py
tests/: __init__.py  conftest.py  test_binary_reader.py  test_data_inspector.py  test_entropy.py  test_exporter.py  test_magic_detector.py
